--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
       integrity="sha256-m5Awq0wGGRCO7AtN92mhhdGt+TJC70hTou7/t5M11WY="
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
+    <link rel="stylesheet" href="/css/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/animate.css" />
     <link rel="stylesheet" type="text/css" href="css/animations.css" />
     <link rel="shortcut icon" href="./images/logo.jpg" type="image/x-icon" />
@@ -56,7 +62,6 @@
         height: 50vh;
         min-height: fit-content;
         padding: 20px 0px;
-        margin: 15px 0px;
         background-color: #eeecf6;
       }
       .banner-content {
@@ -101,15 +106,11 @@
       .trusted-by-name {
         font-size: 20px;
       }
-      .trusted-by-active {
-        border: 1px solid rgba(0, 0, 0, 0.4);
-        border-radius: 5px;
-      }
       /*trusted by - section*/
 
       /* section-message-ctr */
       .section-message-ctr {
-        padding: 100px 0px;
+        padding: 50px 0px 10px 0px;
         font-size: 35px;
         font-weight: 500;
         text-align: center;
@@ -122,7 +123,7 @@
         background: #eeecf6;
       }
       .mission {
-        border-radius: 15px;
+        border-radius: 10px;
         flex: 1;
         height: 350px;
         background: #e0e0e0;
@@ -140,7 +141,7 @@
         height: 50px;
         border-radius: 25px;
         width: 50px;
-        margin: 10px 0px;
+        /* margin: 10px 0px; */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -163,7 +164,7 @@
         text-align: center;
       }
       .why-u {
-        border-radius: 32px;
+        border-radius: 10px;
         background: #011a65;
         box-shadow: -10px 10px 20px #000d31, 10px -10px 20px #022799;
       }
@@ -229,11 +230,14 @@
         .testimonials-i-ctr {
           flex-direction: column;
         }
+        .mission {
+          margin-top: 25px;
+        }
         .col-md-1 {
           display: none;
         }
         .section-message-ctr {
-          padding: 100px 0px;
+          padding: 25px 0px;
           font-size: 30px;
           font-weight: 400;
           text-align: center;
@@ -428,7 +432,7 @@
           Get Connected to the Proffessionals who can <br />
           offer quality services at affordable prices
         </span>
-        <div class="">
+        <div class="mt-4">
           <button class="btn btn-primary">
             Get Started <i class="fas fa-arrow-right"></i>
           </button>
@@ -439,14 +443,15 @@
 
     <section
       id="section-mission"
-      class="d-flex justify-content-center align-items-center py-5"
+      class="d-flex justify-content-center align-items-center pb-5"
     >
       <div class="col-md-1"></div>
       <div
         class="col-md-10 py-5 mission-ctr d-flex justify-content-between align-items-center"
       >
         <div
-          class="mission m-3 p-5 d-flex align-items-start justify-content-center flex-column text-align-center"
+          data-aos="fade-right"
+          class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
         >
           <div class="mission-icon-ctr">
             <i class="far fa-arrow-alt-circle-right"></i>
@@ -459,7 +464,8 @@
           </div>
         </div>
         <div
-          class="mission m-3 p-5 d-flex align-items-start justify-content-center flex-column text-align-center"
+          data-aos="fade-up"
+          class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
         >
           <div class="mission-icon-ctr">
             <i class="fas fa-angle-right"></i>
@@ -468,6 +474,24 @@
           <div class="mission-content">
             To be a Leading and Preffered Provider of IT Services in Uganda And
             East Africa
+          </div>
+        </div>
+        <div
+          data-aos="fade-left"
+          class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
+        >
+          <div class="mission-icon-ctr">
+            <i class="fas fa-angle-right"></i>
+          </div>
+          <div class="mission-hdr py-2">Core Values</div>
+          <div class="mission-content">
+            <ul class="ml-4">
+              <li>Innovation</li>
+              <li>Team Work</li>
+              <li>Excellence</li>
+              <li>Integrity</li>
+              <li>Commitment to Clients</li>
+            </ul>
           </div>
         </div>
       </div>
@@ -482,6 +506,7 @@
         <h2 class="d-flex justify-content-center py-4">Why choose Us?</h2>
         <div class="testimonials-i-ctr d-flex d-lg-flex d-ml-flex">
           <div
+            data-aos="fade-right"
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
@@ -495,6 +520,7 @@
             </div>
           </div>
           <div
+            data-aos="fade-up"
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
@@ -510,6 +536,7 @@
             </div>
           </div>
           <div
+            data-aos="fade-left"
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
@@ -525,6 +552,7 @@
         </div>
         <div class="testimonials-i-ctr d-flex d-lg-flex d-ml-flex">
           <div
+            data-aos="fade-right"
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
@@ -538,6 +566,7 @@
             </div>
           </div>
           <div
+            data-aos="fade-up"
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
@@ -553,6 +582,7 @@
             </div>
           </div>
           <div
+            data-aos="fade-left"
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
@@ -851,126 +881,132 @@
       </div>
       <div class="col-md-1 p-0 m-0"></div>
     </div>
+    <script src="./scripts/aos.js"></script>
+    <script src="Bootstrap/dist/jquery/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+    <script src="Bootstrap/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/owl.carousel.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(".customer-logos").slick({
+          slidesToShow: 5,
+          slidesToScroll: 1,
+          autoplay: true,
+          autoplaySpeed: 1500,
+          arrows: false,
+          dots: false,
+          pauseOnHover: false,
+          responsive: [
+            {
+              breakpoint: 768,
+              settings: {
+                slidesToShow: 4,
+              },
+            },
+            {
+              breakpoint: 520,
+              settings: {
+                slidesToShow: 3,
+              },
+            },
+          ],
+        });
+      });
+    </script>
+    <script>
+      var TxtRotate = function (el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = "";
+        this.tick();
+        this.isDeleting = false;
+      };
+
+      TxtRotate.prototype.tick = function () {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
+
+        if (this.isDeleting) {
+          this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+          this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
+
+        var that = this;
+        var delta = 300 - Math.random() * 100;
+
+        if (this.isDeleting) {
+          delta /= 2;
+        }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+          delta = this.period;
+          this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === "") {
+          this.isDeleting = false;
+          this.loopNum++;
+          delta = 500;
+        }
+
+        setTimeout(function () {
+          that.tick();
+        }, delta);
+      };
+
+      window.onload = function () {
+        var elements = document.getElementsByClassName("txt-rotate");
+        for (var i = 0; i < elements.length; i++) {
+          var toRotate = elements[i].getAttribute("data-rotate");
+          var period = elements[i].getAttribute("data-period");
+          if (toRotate) {
+            new TxtRotate(elements[i], JSON.parse(toRotate), period);
+          }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML =
+          ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
+        document.body.appendChild(css);
+      };
+    </script>
+    <!-- This is the begining of the javascript for the partner sliders -->
+    <script>
+      $(document).ready(function () {
+        $(".customer-logos").slick({
+          slidesToShow: 5,
+          slidesToScroll: 1,
+          autoplay: true,
+          autoplaySpeed: 1500,
+          arrows: false,
+          dots: false,
+          pauseOnHover: false,
+          responsive: [
+            {
+              breakpoint: 768,
+              settings: {
+                slidesToShow: 4,
+              },
+            },
+            {
+              breakpoint: 520,
+              settings: {
+                slidesToShow: 3,
+              },
+            },
+          ],
+        });
+      });
+    </script>
+    <script>
+      $(function () {
+        AOS.init();
+      });
+    </script>
   </body>
 </html>
-
-<script src="Bootstrap/dist/jquery/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-<script src="Bootstrap/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/owl.carousel.min.js"></script>
-<script>
-  $(document).ready(function () {
-    $(".customer-logos").slick({
-      slidesToShow: 5,
-      slidesToScroll: 1,
-      autoplay: true,
-      autoplaySpeed: 1500,
-      arrows: false,
-      dots: false,
-      pauseOnHover: false,
-      responsive: [
-        {
-          breakpoint: 768,
-          settings: {
-            slidesToShow: 4,
-          },
-        },
-        {
-          breakpoint: 520,
-          settings: {
-            slidesToShow: 3,
-          },
-        },
-      ],
-    });
-  });
-</script>
-<script>
-  var TxtRotate = function (el, toRotate, period) {
-    this.toRotate = toRotate;
-    this.el = el;
-    this.loopNum = 0;
-    this.period = parseInt(period, 10) || 2000;
-    this.txt = "";
-    this.tick();
-    this.isDeleting = false;
-  };
-
-  TxtRotate.prototype.tick = function () {
-    var i = this.loopNum % this.toRotate.length;
-    var fullTxt = this.toRotate[i];
-
-    if (this.isDeleting) {
-      this.txt = fullTxt.substring(0, this.txt.length - 1);
-    } else {
-      this.txt = fullTxt.substring(0, this.txt.length + 1);
-    }
-
-    this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
-
-    var that = this;
-    var delta = 300 - Math.random() * 100;
-
-    if (this.isDeleting) {
-      delta /= 2;
-    }
-
-    if (!this.isDeleting && this.txt === fullTxt) {
-      delta = this.period;
-      this.isDeleting = true;
-    } else if (this.isDeleting && this.txt === "") {
-      this.isDeleting = false;
-      this.loopNum++;
-      delta = 500;
-    }
-
-    setTimeout(function () {
-      that.tick();
-    }, delta);
-  };
-
-  window.onload = function () {
-    var elements = document.getElementsByClassName("txt-rotate");
-    for (var i = 0; i < elements.length; i++) {
-      var toRotate = elements[i].getAttribute("data-rotate");
-      var period = elements[i].getAttribute("data-period");
-      if (toRotate) {
-        new TxtRotate(elements[i], JSON.parse(toRotate), period);
-      }
-    }
-    // INJECT CSS
-    var css = document.createElement("style");
-    css.type = "text/css";
-    css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
-    document.body.appendChild(css);
-  };
-</script>
-<!-- This is the begining of the javascript for the partner sliders -->
-<script>
-  $(document).ready(function () {
-    $(".customer-logos").slick({
-      slidesToShow: 5,
-      slidesToScroll: 1,
-      autoplay: true,
-      autoplaySpeed: 1500,
-      arrows: false,
-      dots: false,
-      pauseOnHover: false,
-      responsive: [
-        {
-          breakpoint: 768,
-          settings: {
-            slidesToShow: 4,
-          },
-        },
-        {
-          breakpoint: 520,
-          settings: {
-            slidesToShow: 3,
-          },
-        },
-      ],
-    });
-  });
-</script>
