--- a/index-1.html
+++ b/index-1.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.10/js/all.js"
@@ -167,7 +171,9 @@
 
       /* testimonial-mission-ctr */
       /* .testimonials-ctr {
-        color: rgb(207, 207, 207);
+        /* color: rgb(207, 207, 207); */
+      /* background: #2D3748; 
+
       } */
       .projects {
         color: #35a745;
@@ -272,14 +278,11 @@
         .testimonials-i-ctr {
           flex-direction: column;
         }
-        .mission {
-          margin-top: 25px;
-        }
         .col-md-1 {
           display: none;
         }
         .section-message-ctr {
-          padding: 25px 0px;
+          /* padding: 30px 0px; */
           font-size: 30px;
           font-weight: 400;
           text-align: center;
@@ -321,7 +324,7 @@
           <nav class="nav-menu-container">
             <ul class="nav-menu d-flex flex-wrap">
               <li class="p-2"><a href="/">Home</a></li>
-              <li class="p-2"><a href="/services.html">Services</a></li>
+              <li class="p-2"><a href="">Services</a></li>
             </ul>
           </nav>
         </div>
@@ -329,9 +332,9 @@
         <div class="social-links float-right">
           <nav class="nav-menu-container">
             <ul class="nav-menu d-flex flex-wrap">
-              <li class="p-2"><a href="our-team.html">Our Team</a></li>
-              <li class="p-2"><a href="portfolio.html">Portifolio</a></li>
-              <li class="p-2"><a href="contact-us.html">Contact Us</a></li>
+              <li class="p-2"><a href="/">Our Team</a></li>
+              <li class="p-2"><a href="">Portifolio</a></li>
+              <li class="p-2"><a href="">Contact Us</a></li>
             </ul>
           </nav>
         </div>
@@ -496,7 +499,7 @@
           class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
         >
           <div class="mission-icon-ctr">
-            <i class="far fa-arrow-alt-circle-right"></i>
+            <i class="fas fa fa-lightbulb"></i>
           </div>
           <div class="mission-hdr py-2">Our Mission</div>
           <div class="mission-content">
@@ -506,11 +509,10 @@
           </div>
         </div>
         <div
-          data-aos="fade-up"
           class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
         >
           <div class="mission-icon-ctr">
-            <i class="fas fa-angle-right"></i>
+            <i class="fas fa fa-low-vision"></i>
           </div>
           <div class="mission-hdr py-2">Our Vision</div>
           <div class="mission-content">
@@ -519,11 +521,10 @@
           </div>
         </div>
         <div
-          data-aos="fade-left"
           class="mission mx-3 px-5 pt-5 d-flex align-items-start justify-content-start flex-column text-align-center"
         >
           <div class="mission-icon-ctr">
-            <i class="fas fa-angle-right"></i>
+            <i class="fas fa fa-wine-glass"></i>
           </div>
           <div class="mission-hdr py-2">Core Values</div>
           <div class="mission-content">
@@ -541,72 +542,35 @@
     </section>
     <section
       id="testimonials"
-      class="d-flex justify-content-center align-items-center"
+      class="d-flex justify-content-center align-items-center bg-shadow"
     >
       <div class="col-md-1"></div>
       <div class="col-md-10 testimonials-ctr py-5">
-        <h2 class="d-flex justify-content-center py-4">Why choose Us?</h2>
+        <h2
+          class="d-flex justify-content-center py-4"
+          style="
+            color: #2d6bba;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 700;
+          "
+        >
+          Why choose Us?
+        </h2>
         <div class="testimonials-i-ctr d-flex d-lg-flex d-ml-flex">
           <div
-            data-aos="fade-right"
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
               <i class="fas fa-lock"></i>
             </div>
-            <div class="why-u-hdr py-2">Customer Focus</div>
+            <div class="why-u-hdr py-2">SUSTAINABLE DATA SOLUTIONS</div>
             <div class="why-u-content">
-              Customer focus and continuous investment in our personnel,
-              processes and technology are at the forefront of our business
-              planning, enabling reliability and confidence in the results we
-              provide.
+              We strve to empower businesses and oranizations with sustainable
+              IT solutions that foster porductivity, maximize efficiency whle
+              reducing operating costs. With sustainable data solutions
             </div>
           </div>
           <div
-            data-aos="fade-up"
-            class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
-          >
-            <div class="why-u-icon-ctr">
-              <i class="fas fa-lock"></i>
-            </div>
-            <div class="why-u-hdr py-2">Clients’ Satisfaction:</div>
-            <div class="why-u-content">
-              Work is accepted only once the clients' instructions have been
-              fully understood and mutually agreed by way of a formalized
-              contract review.
-            </div>
-          </div>
-          <div
-            data-aos="fade-left"
-            class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
-          >
-            <div class="why-u-icon-ctr">
-              <i class="fas fa-lock"></i>
-            </div>
-            <div class="why-u-hdr py-2">Quality Service Delivery:</div>
-            <div class="why-u-content">
-              It is the policy of Dreamscom Technologies Ltd to supply and
-              maintain a quality of goods and services which are fully compliant
-              with national and International Standards at all times.
-            </div>
-          </div>
-        </div>
-        <div class="testimonials-i-ctr d-flex d-lg-flex d-ml-flex">
-          <div
-            data-aos="fade-right"
-            class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
-          >
-            <div class="why-u-icon-ctr">
-              <i class="fas fa-lock"></i>
-            </div>
-            <div class="why-u-hdr py-2">Committed Team</div>
-            <div class="why-u-content">
-              With our committed team, we work together to offer great service
-              Delivery to our customers.
-            </div>
-          </div>
-          <div
-            data-aos="fade-up"
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
@@ -622,7 +586,49 @@
             </div>
           </div>
           <div
-            data-aos="fade-left"
+            class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
+          >
+            <div class="why-u-icon-ctr">
+              <i class="fas fa-lock"></i>
+            </div>
+            <div class="why-u-hdr py-2">Our Mission</div>
+            <div class="why-u-content">
+              We strve to empower businesses and oranizations with sustainableit
+              solutions that foster porductivity, maximize efficiency whle
+              reducing operating costs
+            </div>
+          </div>
+        </div>
+        <div class="testimonials-i-ctr d-flex d-lg-flex d-ml-flex">
+          <div
+            class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
+          >
+            <div class="why-u-icon-ctr">
+              <i class="fas fa-lock"></i>
+            </div>
+            <div class="why-u-hdr py-2">SUSTAINABLE DATA SOLUTIONS</div>
+            <div class="why-u-content">
+              We strve to empower businesses and oranizationswith sustainableit
+              solutions that foster porductivity, maximize efficiency whle
+              reducing operating costs. With sustainable data solutions
+            </div>
+          </div>
+          <div
+            class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
+          >
+            <div class="why-u-icon-ctr">
+              <i class="fas fa-lock"></i>
+            </div>
+            <div class="why-u-hdr py-2">
+              Quality &amp; Quick Service Delivery
+            </div>
+            <div class="why-u-content">
+              We strve to empower businesses and oranizationswith sustainableit
+              solutions that foster porductivity, maximize efficiency whle
+              reducing operating costs
+            </div>
+          </div>
+          <div
             class="why-u m-3 p-5 d-flex align-items-center justify-content-center flex-column text-align-center"
           >
             <div class="why-u-icon-ctr">
@@ -855,7 +861,7 @@
                       ><i class="fab fa-facebook fa-fw p-0 m-0 mt-2"></i></a
                   ></span>
                   <span
-                    ><a href="https://twitter.com/DreamscomTech"
+                    ><a href=""
                       ><i class="fab fa-twitter fa-fw p-0 m-0 mt-2"></i></a
                   ></span>
                   <span
@@ -878,132 +884,127 @@
       </div>
       <div class="col-md-1 p-0 m-0"></div>
     </div>
-    <script src="./scripts/aos.js"></script>
-    <script src="Bootstrap/dist/jquery/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
-    <script src="Bootstrap/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/owl.carousel.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(".customer-logos").slick({
-          slidesToShow: 5,
-          slidesToScroll: 1,
-          autoplay: true,
-          autoplaySpeed: 1500,
-          arrows: false,
-          dots: false,
-          pauseOnHover: false,
-          responsive: [
-            {
-              breakpoint: 768,
-              settings: {
-                slidesToShow: 4,
-              },
-            },
-            {
-              breakpoint: 520,
-              settings: {
-                slidesToShow: 3,
-              },
-            },
-          ],
-        });
-      });
-    </script>
-    <script>
-      var TxtRotate = function (el, toRotate, period) {
-        this.toRotate = toRotate;
-        this.el = el;
-        this.loopNum = 0;
-        this.period = parseInt(period, 10) || 2000;
-        this.txt = "";
-        this.tick();
-        this.isDeleting = false;
-      };
-
-      TxtRotate.prototype.tick = function () {
-        var i = this.loopNum % this.toRotate.length;
-        var fullTxt = this.toRotate[i];
-
-        if (this.isDeleting) {
-          this.txt = fullTxt.substring(0, this.txt.length - 1);
-        } else {
-          this.txt = fullTxt.substring(0, this.txt.length + 1);
-        }
-
-        this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
-
-        var that = this;
-        var delta = 300 - Math.random() * 100;
-
-        if (this.isDeleting) {
-          delta /= 2;
-        }
-
-        if (!this.isDeleting && this.txt === fullTxt) {
-          delta = this.period;
-          this.isDeleting = true;
-        } else if (this.isDeleting && this.txt === "") {
-          this.isDeleting = false;
-          this.loopNum++;
-          delta = 500;
-        }
-
-        setTimeout(function () {
-          that.tick();
-        }, delta);
-      };
-
-      window.onload = function () {
-        var elements = document.getElementsByClassName("txt-rotate");
-        for (var i = 0; i < elements.length; i++) {
-          var toRotate = elements[i].getAttribute("data-rotate");
-          var period = elements[i].getAttribute("data-period");
-          if (toRotate) {
-            new TxtRotate(elements[i], JSON.parse(toRotate), period);
-          }
-        }
-        // INJECT CSS
-        var css = document.createElement("style");
-        css.type = "text/css";
-        css.innerHTML =
-          ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
-        document.body.appendChild(css);
-      };
-    </script>
-    <!-- This is the begining of the javascript for the partner sliders -->
-    <script>
-      $(document).ready(function () {
-        $(".customer-logos").slick({
-          slidesToShow: 5,
-          slidesToScroll: 1,
-          autoplay: true,
-          autoplaySpeed: 1500,
-          arrows: false,
-          dots: false,
-          pauseOnHover: false,
-          responsive: [
-            {
-              breakpoint: 768,
-              settings: {
-                slidesToShow: 4,
-              },
-            },
-            {
-              breakpoint: 520,
-              settings: {
-                slidesToShow: 3,
-              },
-            },
-          ],
-        });
-      });
-    </script>
-    <script>
-      $(function () {
-        AOS.init();
-      });
-    </script>
   </body>
 </html>
+
+<script src="Bootstrap/dist/jquery/jquery.min.js"></script>
+<script src="./scripts/aos.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+<script src="Bootstrap/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/owl.carousel.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $(".customer-logos").slick({
+      slidesToShow: 5,
+      slidesToScroll: 1,
+      autoplay: true,
+      autoplaySpeed: 1500,
+      arrows: false,
+      dots: false,
+      pauseOnHover: false,
+      responsive: [
+        {
+          breakpoint: 768,
+          settings: {
+            slidesToShow: 4,
+          },
+        },
+        {
+          breakpoint: 520,
+          settings: {
+            slidesToShow: 3,
+          },
+        },
+      ],
+    });
+  });
+</script>
+<script>
+  var TxtRotate = function (el, toRotate, period) {
+    this.toRotate = toRotate;
+    this.el = el;
+    this.loopNum = 0;
+    this.period = parseInt(period, 10) || 2000;
+    this.txt = "";
+    this.tick();
+    this.isDeleting = false;
+  };
+
+  TxtRotate.prototype.tick = function () {
+    var i = this.loopNum % this.toRotate.length;
+    var fullTxt = this.toRotate[i];
+
+    if (this.isDeleting) {
+      this.txt = fullTxt.substring(0, this.txt.length - 1);
+    } else {
+      this.txt = fullTxt.substring(0, this.txt.length + 1);
+    }
+
+    this.el.innerHTML = '<span class="wrap">' + this.txt + "</span>";
+
+    var that = this;
+    var delta = 300 - Math.random() * 100;
+
+    if (this.isDeleting) {
+      delta /= 2;
+    }
+
+    if (!this.isDeleting && this.txt === fullTxt) {
+      delta = this.period;
+      this.isDeleting = true;
+    } else if (this.isDeleting && this.txt === "") {
+      this.isDeleting = false;
+      this.loopNum++;
+      delta = 500;
+    }
+
+    setTimeout(function () {
+      that.tick();
+    }, delta);
+  };
+
+  window.onload = function () {
+    var elements = document.getElementsByClassName("txt-rotate");
+    for (var i = 0; i < elements.length; i++) {
+      var toRotate = elements[i].getAttribute("data-rotate");
+      var period = elements[i].getAttribute("data-period");
+      if (toRotate) {
+        new TxtRotate(elements[i], JSON.parse(toRotate), period);
+      }
+    }
+    // INJECT CSS
+    var css = document.createElement("style");
+    css.type = "text/css";
+    css.innerHTML = ".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
+    document.body.appendChild(css);
+  };
+</script>
+<!-- This is the begining of the javascript for the partner sliders -->
+<script>
+  $(document).ready(function () {
+    $(".customer-logos").slick({
+      slidesToShow: 5,
+      slidesToScroll: 1,
+      autoplay: true,
+      autoplaySpeed: 1500,
+      arrows: false,
+      dots: false,
+      pauseOnHover: false,
+      responsive: [
+        {
+          breakpoint: 768,
+          settings: {
+            slidesToShow: 4,
+          },
+        },
+        {
+          breakpoint: 520,
+          settings: {
+            slidesToShow: 3,
+          },
+        },
+      ],
+    });
+  });
+</script>
