google site verifications

--- a/index.html
+++ b/index.html
@@ -563,7 +563,16 @@
     >
       <div class="col-md-1"></div>
       <div class="col-md-10 testimonials-ctr py-5">
-        <h2 class="d-flex justify-content-center py-4">Why choose Us?</h2>
+        <h2
+          class="d-flex justify-content-center py-4"
+          style="
+            color: #2d6bba;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 700;
+          "
+        >
+          Why choose Us?
+        </h2>
         <div class="testimonials-i-ctr d-flex d-lg-flex d-ml-flex">
           <div
             data-aos="fade-right"
