--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Poppins"
     />
+    <meta name="keywords" content="Dreamscom Lira, Technology Company Lira" />
+    <meta name="keywords" content="Dreamscom, Dreamscom,lira technology" />
+    <meta name="keywords" content="dreamscom lira uganda, lira technology" />
+    <meta name="keywords" content="tech company in lira" />
+    <meta
+      http-equiv="Cache-Control"
+      content="public, max-age=300, s-maxage=600"
+    />
     <link rel="stylesheet" href="/css/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/animate.css" />
     <link rel="stylesheet" type="text/css" href="css/animations.css" />
@@ -311,7 +319,7 @@
       </div>
     </section>
     <section id="header">
-      <div class="container clearfix d-flex flex-wrap align-items-center">
+      <div class="ctr clearfix d-flex flex-wrap align-items-center">
         <div
           class="contact-info float-left d-block justify-content-left align-items-center flex-grow-1 d-flex d-md-flex d-lg-flex"
         >
